Fix Headline block alignment inside Media Card

--- a/editor.css
+++ b/editor.css
@@ -506,7 +506,8 @@
 .editor-styles-wrapper .c-headline {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  width: 100%; }
   .editor-styles-wrapper .c-headline.has-text-align-left {
     align-items: flex-start; }
   .editor-styles-wrapper .c-headline.has-text-align-right {
