--- a/style.css
+++ b/style.css
@@ -4981,7 +4981,8 @@ body.archive, body.blog, body.search {
 .c-headline {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  width: 100%; }
   .c-headline.has-text-align-left {
     align-items: flex-start; }
   .c-headline.has-text-align-right {
